--- a/MONAI_101.ipynb
+++ b/MONAI_101.ipynb
@@ -2,39 +2,58 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2e9c2191-44f2-4663-812e-b891ca758067",
+   "id": "a4fd919d-b7f7-4d73-a75f-4b0944922b63",
    "metadata": {},
    "source": [
-    "Bu notebook, MONAI (Medical Open Network for AI) kullanarak tıbbi görüntüler üzerinde sınıflandırma yapmak için gereken temel adımları içeriyor.Sırasıyla:\n",
-    "Veri setini indirme: MONAI’nin veri seti fonksiyonlarını kullanarak bir medikal görüntü veri seti edineceğiz.\n",
-    "Veri ön işleme: Görüntüleri modele uygun hale getirmek için çeşitli dönüşümler uygulayacağız.\n",
-    "DenseNet-121 Modeli ile Eğitim: DenseNet-121 modeli kurup eğiteceğiz.\n",
-    "Test verisinde sonucun kontrol edilmesi: Eğitilen modeli test verisinde değerlendirip sonuçları gözden geçireceğiz."
+    "# MONAI REHBERİ\n",
+    "- Bu notebook, MONAI (Medical Open Network for AI) kullanarak tıbbi görüntüler üzerinde sınıflandırma yapmak için gereken temel adımları içeriyor.\n",
+    "- Sırasıyla:\n",
+    "    * Veri setini indirme: MONAI’nin veri seti fonksiyonlarını kullanarak bir medikal görüntü veri seti edineceğiz.\n",
+    "    * Veri ön işleme: Görüntüleri modele uygun hale getirmek için çeşitli dönüşümler uygulayacağız.\n",
+    "    * DenseNet-121 Modeli ile Eğitim: DenseNet-121 modeli kurup eğiteceğiz.\n",
+    "    * Test verisinde sonucun kontrol edilmesi: Eğitilen modeli test verisinde değerlendirip sonuçları gözden geçireceğiz."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40967c79-8e39-4827-a18a-787b98abc795",
+   "metadata": {},
+   "source": [
+    "- Bu adımda MONAI ve diğer gerekli kütüphaneleri yüklememiz gerekiyor. Aşağıdaki kod, MONAI kütüphanesini ekler:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "f33bf08c-22f7-4c6d-b9f9-ae58103bf9f0",
+   "execution_count": null,
+   "id": "120810fc-7b7b-419e-888f-cf9841774cb7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Defuzzy\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\ignite\\handlers\\checkpoint.py:16: DeprecationWarning: `TorchScript` support for functional optimizers is deprecated and will be removed in a future PyTorch release. Consider using the `torch.compile` optimizer instead.\n",
-      "  from torch.distributed.optim import ZeroRedundancyOptimizer\n",
-      "2024-11-19 21:49:09.826969: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "WARNING:tensorflow:From C:\\Users\\Defuzzy\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Bu adımda MONAI ve diğer gerekli kütüphaneleri yüklememiz gerekiyor. Aşağıdaki kod, MONAI kütüphanesini ekler:\n",
-    "\n",
-    "!python -c \"import monai\" || pip install -q \"monai-weekly[ignite, tqdm]\"\n",
-    "#Bu satır, eğer monai yüklü değilse pip install komutunu çalıştırarak MONAI'nin en güncel haftalık sürümünü indirir. Böylece MONAI ile uyumlu ek kütüphaneleri (ignite, tqdm) de kurabiliriz."
+    "!python -c \"import monai\" || pip install -q \"monai-weekly[ignite, tqdm]\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7da12813-9cdf-4bf8-913b-49ea15fa65bb",
+   "metadata": {},
+   "source": [
+    "- Bu satır, eğer monai yüklü değilse pip install komutunu çalıştırarak MONAI'nin en güncel haftalık sürümünü indirir. Böylece MONAI ile uyumlu ek kütüphaneleri (ignite, tqdm) de kurabiliriz."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54023ba2-b6ff-483f-8cbb-b88c4cb7b8f9",
+   "metadata": {},
+   "source": [
+    "## 1. Gerekli Kütüphaneler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2201a13-026d-4ed0-913c-69f7351f6260",
+   "metadata": {},
+   "source": [
+    "- Diğer gerekli kütüphaneleri Import edelim"
    ]
   },
   {
@@ -91,7 +110,6 @@
     }
    ],
    "source": [
-    "# Diğer gerekli kütüphaneleri Import edelim\n",
     "import logging\n",
     "import numpy as np\n",
     "import os\n",
@@ -110,9 +128,32 @@
     "from monai.networks.nets import densenet121\n",
     "from monai.transforms import LoadImageD, EnsureChannelFirstD, ScaleIntensityD, Compose\n",
     "\n",
-    "print_config()\n",
-    "#print_config(): MONAI'nin sürüm ve konfigürasyon bilgilerini ekrana yazdırır. Böylece sistemin uyumluluğunu kontrol edebiliriz.\n",
-    "#MedNISTDataset: MONAI’nin sunduğu bir tıbbi görüntü veri setidir. Eğitim ve test işlemlerinde bu veri setini kullanacağız."
+    "print_config()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e5acc48-6adb-4adc-bc6d-16b0b258de62",
+   "metadata": {},
+   "source": [
+    "- `print_config()` MONAI'nin sürüm ve konfigürasyon bilgilerini ekrana yazdırır. Böylece sistemin uyumluluğunu kontrol edebiliriz.\n",
+    "- `MedNISTDataset` MONAI’nin sunduğu bir tıbbi görüntü veri setidir. Eğitim ve test işlemlerinde bu veri setini kullanacağız."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d93c8db-ef88-402d-bdeb-1d405fa8d76b",
+   "metadata": {},
+   "source": [
+    "## 2. Veri Setini Hazırlama"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab7d1754-0bf5-459d-b078-a3a62a6607eb",
+   "metadata": {},
+   "source": [
+    "- Veri setini indirdikten sonra, verileri modele uygun hale getirecek dönüşümleri tanımlıyoruz."
    ]
   },
   {
@@ -130,12 +171,22 @@
     }
    ],
    "source": [
-    "#Veri setini indirdikten sonra, verileri modele uygun hale getirecek dönüşümleri tanımlıyoruz.\n",
     "directory = os.environ.get(\"MONAI_DATA_DIRECTORY\")\n",
     "if directory is not None:\n",
     "    os.makedirs(directory, exist_ok=True)\n",
     "root_dir = tempfile.mkdtemp() if directory is None else directory\n",
     "print(root_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27bf34ab-3626-4f51-921a-08359710e36e",
+   "metadata": {},
+   "source": [
+    "- Bu aşamada veriyi dönüştürerek modelimize uygun bir hale getiriyoruz. Yapacağımız her şey veriyi sadece modele hazır hale getirmek için kullanılan yöntemleri içeriyor.\n",
+    "- `LoadImageD` Görüntüyü yükler.\n",
+    "- `EnsureChannelFirstD` Tek kanaldaki görüntülerin formatını dönüştürür.\n",
+    "- `ScaleIntensityD` Görüntü yoğunluğunu yeniden ölçeklendirerek modele uygun hale getirir. Görüntünün kontrastını düzenlediğini söyleyedebiliriz."
    ]
   },
   {
@@ -145,11 +196,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Bu aşamada veriyi dönüştürerek modelimize uygun bir hale getiriyoruz. Yapacağımız her şey veriyi sadece modele hazır hale getirmek için kullanılan yöntemleri içeriyor.\n",
-    "#LoadImageD: Görüntüyü yükler.\n",
-    "#EnsureChannelFirstD: Tek kanaldaki görüntülerin formatını dönüştürür.\n",
-    "#ScaleIntensityD: Görüntü yoğunluğunu yeniden ölçeklendirerek modele uygun hale getirir. Görüntünün kontrastını düzenlediğini söyleyedebiliriz.\n",
-    "#\n",
     "transforms = Compose(\n",
     "    [\n",
     "        LoadImageD(keys=[\"image\"]),\n",
@@ -157,6 +203,15 @@
     "        ScaleIntensityD(keys=[\"image\"]),\n",
     "    ]\n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37edfb91-a8b8-4138-a93a-1ea9bd6de828",
+   "metadata": {},
+   "source": [
+    "- Burada `root_dir` geçici olarak MedNIST veri setini geçici bir yerde depolamamıza olanak tanıyor.\n",
+    "- `Section=\"training\"` ise MedNIST veri seti içinden eğitim verilerini çekmemizi sağlıyor."
    ]
   },
   {
@@ -190,9 +245,50 @@
     }
    ],
    "source": [
-    "dataset = MedNISTDataset(root_dir=root_dir, transform=transforms, section=\"training\", download=True)\n",
-    "#Burada root_dir geçici olarak MedNIST veri setini geçici bir yerde depolamamıza olanak tanıyor.\n",
-    "#Section=\"training\" ise MedNIST veri seti içinden eğitim verilerini çekmemizi sağlıyor."
+    "dataset = MedNISTDataset(root_dir=root_dir, transform=transforms, section=\"training\", download=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6345f745-c708-47be-a97d-1ea45183f648",
+   "metadata": {},
+   "source": [
+    "## 3. DenseNet-121 Modeli Tanımlama"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "095376eb-738e-42db-bc33-91d524e391f2",
+   "metadata": {},
+   "source": [
+    "- DenseNet-121, sınıflandırma görevlerinde yaygın kullanılan bir modeldir. Burada in_channels=1 olarak gri tonlamalı görüntüler için ayarlanmıştır.\n",
+    "- `spatial_dims=2` verinin kaç boyutlu bir vektör olduğunu gösterir.\n",
+    "- `in_channels=1` görüntülerin siyah beyaz olduğunu gösterir. RGB (yeşil kırmızı ve mavi kanallar) tipi bir girdi 3 kanala sahip olur.\n",
+    "- `out_channels=6` yapacağımız classification class sayısını gösterir."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "faa64ffc-2e92-4128-a83e-8f2fe2b32a30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = densenet121(spatial_dims=2, in_channels=1, out_channels=6).to(\"cuda:0\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c5a5791-fae3-4743-ba00-9b322490af1b",
+   "metadata": {},
+   "source": [
+    "- Büyük veri setleriyle çalışırken bütün Datamızı ramde depolamamız mümkün olmaz. Bundan dolayı veri setini batclere böleriz.\n",
+    "- `Epoch` ise bütün veri setinin baştan sona model tarafından işlenme sayısını söyler.\n",
+    "- `batch_size=64` Her adımda 64 görüntüyü önbelleğe alır.\n",
+    "- `shuffle=True` Her epoch başına veriyi karıştırır, veri sırasını değiştirir.\n",
+    "- Eğitimde Adam optimizasyon algoritması kullanılır ve modelin performansı CrossEntropyLoss fonksiyonu ile değerlendirilir.\n",
+    "- `adam optimisation` Bir çok yöntemi bir arada kullanarak daha verimli bir model eğitimi sağlar. Momentum,Adaptive Learning rate ve Bias correction içerir.\n",
+    "- `Cross-Entropy Loss` Modelin ön gördüğü değer ve Gerçek değer arasındaki farkı her örnek için toplar."
    ]
   },
   {
@@ -202,12 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Büyük veri setleriyle çalışırken bütün Datamızı ramde depolamamız mümkün olmaz. Bundan dolayı veri setini batclere böleriz.\n",
-    "#Epoch ise bütün veri setinin baştan sona model tarafından işlenme sayısını söyler.\n",
-    "#batch_size=64: Her adımda 64 görüntüyü önbelleğe alır.\n",
-    "#shuffle=True: Her epoch başına veriyi karıştırır, veri sırasını değiştirir.\n",
     "max_epochs = 5\n",
-    "model = densenet121(spatial_dims=2, in_channels=1, out_channels=6).to(\"cuda:0\")\n",
     "\n",
     "logging.basicConfig(stream=sys.stdout, level=logging.INFO)\n",
     "trainer = SupervisedTrainer(\n",
@@ -219,10 +310,23 @@
     "    loss_function=torch.nn.CrossEntropyLoss(),\n",
     "    inferer=SimpleInferer(),\n",
     "    train_handlers=StatsHandler(),\n",
-    ")\n",
-    "#Eğitimde Adam optimizasyon algoritması kullanılır ve modelin performansı CrossEntropyLoss fonksiyonu ile değerlendirilir.\n",
-    "#adam optimisation: Bir çok yöntemi bir arada kullanarak daha verimli bir model eğitimi sağlar. Momentum,Adaptive Learning rate ve Bias correction içerir.\n",
-    "#Cross-Entropy Loss: Modelin ön gördüğü değer ve Gerçek değer arasındaki farkı her örnek için toplar."
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a199a98d-da1c-4cc7-a7f0-8b523c6ca3ca",
+   "metadata": {},
+   "source": [
+    "## 4. Eğitim ve Değerlendirme"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19f87f6d-defa-47a5-8350-018fc1a7e4ad",
+   "metadata": {},
+   "source": [
+    "- Modelimizi nihayet eğitmeye başlayabiliriz."
    ]
   },
   {
@@ -731,6 +835,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ddbeb2e1-8933-4a31-b5db-3faf21e25a13",
+   "metadata": {},
+   "source": [
+    "- `eval_mode(model)` bloğu, modelin değerlendirme (inference) modunda olduğunu belirtir, bu da dropout ve batch normalization gibi katmanların değerlendirme aşamasında nasıl çalışması gerektiğini belirler.\n",
+    "- `DataLoader`, test veri kümesindeki her bir örneği (bu durumda batch_size=1 olduğundan her seferinde tek bir örnek) yükler.\n",
+    "- `model(item[\"image\"].to(\"cuda:0\"))`, modelin giriş görüntüsünü GPU'ya (cuda:0) taşıyarak tahmin yapmasını sağlar. Sonuçlar daha sonra CPU'ya taşınır ve numpy array'e dönüştürülür.\n",
+    "- `prob.argmax()` ile modelin tahmin ettiği sınıfın olasılıkları arasından en yüksek olanı bulunur ve bu sınıf ismi class_names listesinde karşılık gelen isme dönüştürülür.\n",
+    "- `gt = item[\"class_name\"][0]` ile o örneğin gerçek sınıfı alınır.\n",
+    "- Son olarak, tahmin ve gerçek sınıf ekrana yazdırılır. Bu işlem, max_items_to_print kadar (10 örnek) tekrarlanır.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "2a84b0e3-89df-481c-8d08-cc442f98df2a",
@@ -767,22 +884,16 @@
     "        print(f\"Class prediction is {pred}. Ground-truth: {gt}\")\n",
     "        max_items_to_print -= 1\n",
     "        if max_items_to_print == 0:\n",
-    "            break\n",
-    "#eval_mode(model) bloğu, modelin değerlendirme (inference) modunda olduğunu belirtir, bu da dropout ve batch normalization gibi katmanların değerlendirme aşamasında nasıl çalışması gerektiğini belirler.\n",
-    "#DataLoader, test veri kümesindeki her bir örneği (bu durumda batch_size=1 olduğundan her seferinde tek bir örnek) yükler.\n",
-    "#model(item[\"image\"].to(\"cuda:0\")), modelin giriş görüntüsünü GPU'ya (cuda:0) taşıyarak tahmin yapmasını sağlar. Sonuçlar daha sonra CPU'ya taşınır ve numpy array'e dönüştürülür.\n",
-    "#prob.argmax() ile modelin tahmin ettiği sınıfın olasılıkları arasından en yüksek olanı bulunur ve bu sınıf ismi class_names listesinde karşılık gelen isme dönüştürülür.\n",
-    "#gt = item[\"class_name\"][0] ile o örneğin gerçek sınıfı alınır.\n",
-    "#Son olarak, tahmin ve gerçek sınıf ekrana yazdırılır. Bu işlem, max_items_to_print kadar (10 örnek) tekrarlanır.\n"
+    "            break"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94ab8250-1721-4874-b1bf-97d685cb8531",
+   "cell_type": "markdown",
+   "id": "fda03509-6caa-4b6e-bb0b-805f4642ea1a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- Bu çıktı, modelin test verisindeki örnekler için yaptığı tahminlerle, o örneklerin gerçek etiketlerini (ground-truth) karşılaştırır. Her satır, bir örnek için modelin tahmin ettiği sınıf ile o örneğin doğru sınıfını gösterir."
+   ]
   }
  ],
  "metadata": {
