--- a/MONAI_101.ipynb
+++ b/MONAI_101.ipynb
@@ -180,6 +180,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5a985b4c-28df-4054-ac98-dcb06d1019d8",
+   "metadata": {},
+   "source": [
+    "- Burada `root_dir` geçici olarak MedNIST veri setini geçici bir yerde depolamamıza olanak tanıyor.\n",
+    "- `Section=\"training\"` ise MedNIST veri seti içinden eğitim verilerini çekmemizi sağlıyor."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "27bf34ab-3626-4f51-921a-08359710e36e",
    "metadata": {},
    "source": [
@@ -203,15 +212,6 @@
     "        ScaleIntensityD(keys=[\"image\"]),\n",
     "    ]\n",
     ")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "37edfb91-a8b8-4138-a93a-1ea9bd6de828",
-   "metadata": {},
-   "source": [
-    "- Burada `root_dir` geçici olarak MedNIST veri setini geçici bir yerde depolamamıza olanak tanıyor.\n",
-    "- `Section=\"training\"` ise MedNIST veri seti içinden eğitim verilerini çekmemizi sağlıyor."
    ]
   },
   {
@@ -258,10 +258,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "095376eb-738e-42db-bc33-91d524e391f2",
+   "id": "e8dd5a2e-c6b4-449e-bc24-b0a70b11a685",
    "metadata": {},
    "source": [
-    "- DenseNet-121, sınıflandırma görevlerinde yaygın kullanılan bir modeldir. Burada in_channels=1 olarak gri tonlamalı görüntüler için ayarlanmıştır.\n",
+    "- DenseNet-121, sınıflandırma görevlerinde yaygın kullanılan bir modeldir. Burada `in_channels=1` olarak gri tonlamalı görüntüler için ayarlanmıştır.\n",
     "- `spatial_dims=2` verinin kaç boyutlu bir vektör olduğunu gösterir.\n",
     "- `in_channels=1` görüntülerin siyah beyaz olduğunu gösterir. RGB (yeşil kırmızı ve mavi kanallar) tipi bir girdi 3 kanala sahip olur.\n",
     "- `out_channels=6` yapacağımız classification class sayısını gösterir."
@@ -279,14 +279,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c5a5791-fae3-4743-ba00-9b322490af1b",
+   "id": "8e1f4aad-fd92-483e-8f51-b050be8dec67",
    "metadata": {},
    "source": [
     "- Büyük veri setleriyle çalışırken bütün Datamızı ramde depolamamız mümkün olmaz. Bundan dolayı veri setini batclere böleriz.\n",
     "- `Epoch` ise bütün veri setinin baştan sona model tarafından işlenme sayısını söyler.\n",
     "- `batch_size=64` Her adımda 64 görüntüyü önbelleğe alır.\n",
     "- `shuffle=True` Her epoch başına veriyi karıştırır, veri sırasını değiştirir.\n",
-    "- Eğitimde Adam optimizasyon algoritması kullanılır ve modelin performansı CrossEntropyLoss fonksiyonu ile değerlendirilir.\n",
+    "- Eğitimde Adam optimizasyon algoritması kullanılır ve modelin performansı `CrossEntropyLoss` fonksiyonu ile değerlendirilir.\n",
     "- `adam optimisation` Bir çok yöntemi bir arada kullanarak daha verimli bir model eğitimi sağlar. Momentum,Adaptive Learning rate ve Bias correction içerir.\n",
     "- `Cross-Entropy Loss` Modelin ön gördüğü değer ve Gerçek değer arasındaki farkı her örnek için toplar."
    ]
