--- a/MONAI_101.ipynb
+++ b/MONAI_101.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a4fd919d-b7f7-4d73-a75f-4b0944922b63",
+   "id": "928d7af1-76d1-4e33-95c4-6ad946cbcadd",
    "metadata": {},
    "source": [
-    "# MONAI REHBERİ\n",
+    "# MONAI REHBERİ 1.1 (Classification)\n",
     "- Bu notebook, MONAI (Medical Open Network for AI) kullanarak tıbbi görüntüler üzerinde sınıflandırma yapmak için gereken temel adımları içeriyor.\n",
     "- Sırasıyla:\n",
     "    * Veri setini indirme: MONAI’nin veri seti fonksiyonlarını kullanarak bir medikal görüntü veri seti edineceğiz.\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40967c79-8e39-4827-a18a-787b98abc795",
+   "id": "3071cd22-5930-4343-973b-72cbbe150bc7",
    "metadata": {},
    "source": [
     "- Bu adımda MONAI ve diğer gerekli kütüphaneleri yüklememiz gerekiyor. Aşağıdaki kod, MONAI kütüphanesini ekler:"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7da12813-9cdf-4bf8-913b-49ea15fa65bb",
+   "id": "488c1919-a1ea-4f98-9eb8-3ff6fce28b3f",
    "metadata": {},
    "source": [
     "- Bu satır, eğer monai yüklü değilse pip install komutunu çalıştırarak MONAI'nin en güncel haftalık sürümünü indirir. Böylece MONAI ile uyumlu ek kütüphaneleri (ignite, tqdm) de kurabiliriz."
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54023ba2-b6ff-483f-8cbb-b88c4cb7b8f9",
+   "id": "faeeefaa-b689-42ca-a2a6-85cf65620294",
    "metadata": {},
    "source": [
     "## 1. Gerekli Kütüphaneler"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2201a13-026d-4ed0-913c-69f7351f6260",
+   "id": "065d0bee-fa9e-48f2-8fd8-98664412faea",
    "metadata": {},
    "source": [
     "- Diğer gerekli kütüphaneleri Import edelim"
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e5acc48-6adb-4adc-bc6d-16b0b258de62",
+   "id": "93fede21-a7c4-41e1-befc-5f70373cd4de",
    "metadata": {},
    "source": [
     "- `print_config()` MONAI'nin sürüm ve konfigürasyon bilgilerini ekrana yazdırır. Böylece sistemin uyumluluğunu kontrol edebiliriz.\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d93c8db-ef88-402d-bdeb-1d405fa8d76b",
+   "id": "f36c10cf-1cb3-4f6c-9c63-9dc15303a043",
    "metadata": {},
    "source": [
     "## 2. Veri Setini Hazırlama"
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab7d1754-0bf5-459d-b078-a3a62a6607eb",
+   "id": "c2adcf12-27f2-46e4-a03f-b5b5b7f72c45",
    "metadata": {},
    "source": [
     "- Veri setini indirdikten sonra, verileri modele uygun hale getirecek dönüşümleri tanımlıyoruz."
@@ -158,18 +158,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "7b9109e1-0485-475e-8047-0c5f42827f4c",
+   "execution_count": null,
+   "id": "1cabb183-b72f-4cdc-a298-906e09c50335",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Defuzzy\\AppData\\Local\\Temp\\tmpv_73jdoa\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "directory = os.environ.get(\"MONAI_DATA_DIRECTORY\")\n",
     "if directory is not None:\n",
@@ -180,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a985b4c-28df-4054-ac98-dcb06d1019d8",
+   "id": "f8737503-df68-439c-90fb-ecdb0f7e1f5f",
    "metadata": {},
    "source": [
     "- Burada `root_dir` geçici olarak MedNIST veri setini geçici bir yerde depolamamıza olanak tanıyor.\n",
@@ -189,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27bf34ab-3626-4f51-921a-08359710e36e",
+   "id": "77c006c3-4d2f-42d4-a9cc-44af2e89db86",
    "metadata": {},
    "source": [
     "- Bu aşamada veriyi dönüştürerek modelimize uygun bir hale getiriyoruz. Yapacağımız her şey veriyi sadece modele hazır hale getirmek için kullanılan yöntemleri içeriyor.\n",
@@ -250,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6345f745-c708-47be-a97d-1ea45183f648",
+   "id": "04228d2e-1ca0-41ec-b465-a15da3504eff",
    "metadata": {},
    "source": [
     "## 3. DenseNet-121 Modeli Tanımlama"
@@ -258,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8dd5a2e-c6b4-449e-bc24-b0a70b11a685",
+   "id": "7690f70c-e53d-4e95-955b-23de8531fa52",
    "metadata": {},
    "source": [
     "- DenseNet-121, sınıflandırma görevlerinde yaygın kullanılan bir modeldir. Burada `in_channels=1` olarak gri tonlamalı görüntüler için ayarlanmıştır.\n",
@@ -279,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e1f4aad-fd92-483e-8f51-b050be8dec67",
+   "id": "75d27aa1-3644-49b1-9284-21f6881f816b",
    "metadata": {},
    "source": [
     "- Büyük veri setleriyle çalışırken bütün Datamızı ramde depolamamız mümkün olmaz. Bundan dolayı veri setini batclere böleriz.\n",
@@ -293,8 +285,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "7bb1b431-e86a-4032-8f18-f6cb39edde42",
+   "execution_count": null,
+   "id": "b1fe6000-3cf0-4d3b-b48e-3c81fab9dd2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a199a98d-da1c-4cc7-a7f0-8b523c6ca3ca",
+   "id": "2528ec24-3d22-44d9-9ae9-206999fee28c",
    "metadata": {},
    "source": [
     "## 4. Eğitim ve Değerlendirme"
@@ -323,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19f87f6d-defa-47a5-8350-018fc1a7e4ad",
+   "id": "d989bf2a-7232-4845-93fe-4d29f6f26faa",
    "metadata": {},
    "source": [
     "- Modelimizi nihayet eğitmeye başlayabiliriz."
@@ -836,7 +828,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddbeb2e1-8933-4a31-b5db-3faf21e25a13",
+   "id": "1887beb1-8d0a-411c-8b03-c69c51f4a5f4",
    "metadata": {},
    "source": [
     "- `eval_mode(model)` bloğu, modelin değerlendirme (inference) modunda olduğunu belirtir, bu da dropout ve batch normalization gibi katmanların değerlendirme aşamasında nasıl çalışması gerektiğini belirler.\n",
@@ -889,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fda03509-6caa-4b6e-bb0b-805f4642ea1a",
+   "id": "b9d7d674-7bb7-4501-b82c-182e55b701d8",
    "metadata": {},
    "source": [
     "- Bu çıktı, modelin test verisindeki örnekler için yaptığı tahminlerle, o örneklerin gerçek etiketlerini (ground-truth) karşılaştırır. Her satır, bir örnek için modelin tahmin ettiği sınıf ile o örneğin doğru sınıfını gösterir."
